# migrantsbridge

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 078a7feef9ed_initial_schema.py
backend/app/: config.py  constants.py  dependencies.py  exceptions.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  billing.py  (+10 more)
backend/app/core/: celery_app.py  database.py  middleware.py  pagination.py  redis.py  security.py
backend/app/integrations/: claude.py  email.py  payment.py  sms.py  storage.py
backend/app/models/: __init__.py  audit.py  base.py  billing.py  case.py  client.py  communication.py  document.py  intake.py  scheduling.py  task.py  user.py  wealth.py  workflow.py
backend/app/prompts/: document_classification.py  eligibility.py  task_routing.py  workflow_generation.py
backend/app/schemas/: auth.py  billing.py  case.py  client.py  common.py  communication.py  document.py  intake.py  scheduling.py  task.py  wealth.py  workflow.py
backend/app/scripts/: seed.py
backend/app/services/: ai_service.py  auth_service.py  billing_service.py  case_service.py  client_service.py  communication_service.py  document_service.py  intake_service.py  reporting_service.py  scheduling_service.py  task_service.py  wealth_service.py  workflow_service.py
backend/app/utils/: export.py  formatters.py  i18n.py  validators.py
backend/app/workers/: document_tasks.py  notification_tasks.py  reminder_tasks.py  reporting_tasks.py  workflow_tasks.py
(+171 files in other folders)
