[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "migrantsbridge"
version = "0.1.0"
description = "MigrantsBridge — case-management platform for migrant service organizations"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "pydantic-settings>=2.2,<3",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7,<2",
    "celery[redis]>=5.3,<6",
    "redis>=5.0,<6",
    "anthropic>=0.25,<1",
    "python-multipart>=0.0.9,<1",
    "jinja2>=3.1,<4",
    "boto3>=1.34,<2",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "factory-boy>=3.3,<4",
    "httpx>=0.27,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
